# flask-blog

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  notes.md  pyproject.toml  requirements.txt  wsgi_start.py
flaskdemo/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskdemo/templates/: base.html
flaskdemo/templates/blog/: about.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
